# options

./: CMakeLists.txt  README.md  generate.py
example/: .gitignore  CMakeLists.txt  README.md  main.c
example/csv/: char_ids.csv  defaults.csv
example/yaml/: char_ids.yaml  defaults.yaml
